# stm32-peripheral-drivers

./: .gitignore  CMakeLists.txt  README.md
arduino/: I2C_slave_ex.ino
examples/i2c_master/: CMakeLists.txt  main.c
peripheral_drivers/: CMakeLists.txt
peripheral_drivers/Src/: example_usage.c
peripheral_drivers/drivers/Inc/: stm32f446xx.h  stm32f446xx_gpio_driver.h
peripheral_drivers/inc/: stm32f446xx.h  stm32f446xx_i2c_driver.h  stm32f446xx_rcc_driver.h  stm32f446xx_systick_driver.h  stm32f446xx_uart_driver.h
peripheral_drivers/src/: stm32f446xx_gpio_driver.c  stm32f446xx_i2c_driver.c  stm32f446xx_rcc_driver.c  stm32f446xx_spi_driver.c  stm32f446xx_systick_driver.c  stm32f446xx_uart_driver.c
system/: CMakeLists.txt
system/cmake/: gcc-arm-none-eabi.cmake
